@@ -6,9 +6,16 @@
 Internal functions that don't depend on any CLI functionality.
 """
 
-import gentoopm
+import os
+from pathlib import Path
+
 import pkgcheck
-from gentoopm.basepm.repo import PMRepository
+import pkgcore.config
+import pkgcore.ebuild.repository
+import pkgcore.vdb.ondisk
+from pkgcore.ebuild.atom import atom
+from pkgcore.ebuild.repo_objs import RepoConfig
+from pkgcore.ebuild.repository import UnconfiguredTree
 from pydantic import validate_call
 from sortedcontainers import SortedDict, SortedSet
 
@@ -21,6 +28,31 @@ from find_work.core.types.results import (
 from find_work.plugins.pkgcheck_scan.options import PkgcheckOptions
 
 
+class PkgcorePM:
+
+    def __init__(self) -> None:
+        config_root = os.environ.get("PORTAGE_CONFIGROOT", "")
+        kwargs = {}
+        if config_root != "":
+            kwargs["location"] = str(Path(config_root) / "etc" / "portage")
+
+        self._config = pkgcore.config.load_config(**kwargs)
+        self._domain = self._config.get_default("domain")
+
+    @property
+    def installed(self) -> pkgcore.vdb.ondisk.tree:
+        return self._domain.repos_raw["vdb"]
+
+    @validate_call
+    def repo_from_name(self, name: str) -> UnconfiguredTree:
+        return self._domain.ebuild_repos_raw[name]
+
+    @validate_call
+    def repo_from_path(self, path: str | Path) -> UnconfiguredTree:
+        repo_config = RepoConfig(location=str(path))
+        return pkgcore.ebuild.repository.tree(self._config, repo_config)
+
+
 @validate_call
 def do_pkgcheck_scan(options: MainOptions) -> SortedDict[
     str, SortedSet[PkgcheckResult]
@@ -29,11 +61,19 @@ def do_pkgcheck_scan(options: MainOptions) -> SortedDict[
         options.children["pkgcheck"]
     )
 
-    repo_obj: PMRepository
-    if options.only_installed or options.maintainer:
-        pm = gentoopm.get_package_manager()
-        if options.maintainer:
-            repo_obj = pm.repositories[plugin_options.repo]
+    need_repo_obj = bool(options.maintainer)
+    need_pm = need_repo_obj or options.only_installed
+
+    pm: PkgcorePM
+    repo: UnconfiguredTree
+    if need_pm:
+        pm = PkgcorePM()
+        if need_repo_obj:
+            repo = (
+                pm.repo_from_path(repo_path)
+                if (repo_path := Path(plugin_options.repo).resolve()).is_dir()
+                else pm.repo_from_name(plugin_options.repo)
+            )
 
     cli_opts = [
         "--repo", plugin_options.repo,
@@ -45,18 +85,38 @@ def do_pkgcheck_scan(options: MainOptions) -> SortedDict[
 
     data: SortedDict[str, SortedSet[PkgcheckResult]] = SortedDict()
     for result in pkgcheck.scan(cli_opts):
-        if plugin_options.message not in result.desc:
-            continue
+        if plugin_options.message:
+            if plugin_options.message not in result.desc:
+                continue
 
         package = "/".join([result.category, result.package])
-        if options.only_installed and package not in pm.installed:
-            continue
-        if options.maintainer:
-            for maint in repo_obj.select(package).maintainers:
-                if maint.email == options.maintainer:
+        pkg_atom: atom
+        if need_pm:
+            pkg_atom = atom(package).unversioned_atom
+
+        if options.only_installed:
+            if pkg_atom not in pm.installed:
+                continue
+
+        if options.maintainer == "maintainer-needed@gentoo.org":
+            for pkg_match in repo.itermatch(pkg_atom):
+                if len(pkg_match.maintainers) == 0:
                     break
             else:
                 continue
+        elif options.maintainer:
+            maint_matched = False
+            for pkg_match in repo.itermatch(pkg_atom):
+                for maint in pkg_match.maintainers:
+                    if maint.email == options.maintainer:
+                        maint_matched = True
+                        break
+
+                if maint_matched:
+                    break
+            else:
+                continue
+
         data.setdefault(package, SortedSet()).add(
             PkgcheckResult(
                 priority=PkgcheckResultPriority(
